# tinyrenderer_notes

./: CMakeLists.txt  executable-build.sh
01_draw_line/: CMakeLists.txt
02_wireframe_render/: CMakeLists.txt
03_draw_triangle_and_plane_coloring/: CMakeLists.txt
04zbuffer/: CMakeLists.txt
05_perspective_projection/: CMakeLists.txt
06_move_view_angle/: CMakeLists.txt
07Shader/: CMakeLists.txt
08_perspective_correction/: CMakeLists.txt
