
project(tiny_render_notes)

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/build)
message(STATUS "CMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/bin/)
message(STATUS "CMAKE_RUNTIME_OUTPUT_DIRECTORY=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

ADD_SUBDIRECTORY(01_draw_line)
ADD_SUBDIRECTORY(02_wireframe_render)
ADD_SUBDIRECTORY(03_draw_triangle_and_plane_coloring)
ADD_SUBDIRECTORY(04zbuffer)
ADD_SUBDIRECTORY(05_perspective_projection)
ADD_SUBDIRECTORY(06_move_view_angle)
ADD_SUBDIRECTORY(07Shader)
#ADD_SUBDIRECTORY(08_perspective_correction)
